ops/k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: studyhub-dev
spec:
  serviceName: "kafka" 
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:3.8.0
        ports:
        - containerPort: 9092  # INTERNAL k8s
        - containerPort: 9093  # Controller
        - containerPort: 9094  # EXTERNAL port-forward
