ops/k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Acer\.local\bin\kompose.exe convert -f studyhub/ops/docker-compose.dev.yml -o k8s/ --namespace studyhub-dev --controller deployment --volumes persistentVolumeClaim
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: keycloak
  name: keycloak
  namespace: studyhub-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Acer\.local\bin\kompose.exe convert -f studyhub/ops/docker-compose.dev.yml -o k8s/ --namespace studyhub-dev --controller deployment --volumes persistentVolumeClaim
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start-dev
          image: quay.io/keycloak/keycloak:25.0
          name: keycloak
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
