ops/k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Acer\.local\bin\kompose.exe convert -f studyhub/ops/docker-compose.dev.yml -o k8s/ --namespace studyhub-dev --controller deployment --volumes persistentVolumeClaim
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
  namespace: studyhub-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Acer\.local\bin\kompose.exe convert -f studyhub/ops/docker-compose.dev.yml -o k8s/ --namespace studyhub-dev --controller deployment --volumes persistentVolumeClaim
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              value: password
            - name: RABBITMQ_DEFAULT_USER
              value: user
          image: rabbitmq:3.13-management-alpine
          name: rabbitmq
          ports:
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
      restartPolicy: Always
