ops/k8s/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: studyhub-dev
spec:
  type: ClusterIP
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
