ops/k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\Acer\.local\bin\kompose.exe convert -f studyhub/ops/docker-compose.dev.yml -o k8s/ --namespace studyhub-dev --controller deployment --volumes persistentVolumeClaim
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: minio
  name: minio
  namespace: studyhub-dev
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    io.kompose.service: minio
